--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,2 +1,8 @@
 <h1>Experiences#show</h1>
-<p>Find me in app/views/experiences/show.html.erb</p>
+
+<div>
+<h2><strong><%=@experience.title  %></strong></h2>
+<p><%= @experience.description %></p>
+<p><%= @experience.location %></p>
+<p><%= @experience.price %> EUR</p>
+</div>
