--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Experiences#index</h1>
-<p>Find me in app/views/experiences/index.html.erb</p>
+<h1>LXperiences</h1>
+<p>The app to discover the most fun part of Lisbon and regions</p>
+
+
+  <% @experiences.each do |experience|%>
+    <ul>
+      <li><strong>Title: </strong><%= experience.title %></li>
+      <li><strong>Description: </strong><%= experience.description %></li>
+      <li><strong>Location: </strong><%= experience.location %></li>
+      <li><strong>Price: </strong><%= experience.price %></li>
+      <br>
+    </ul>
+  <% end %>
+
+
+<%#= render "experiences/list", experiences: @experiences %>
+
+<%= link_to "New experience", new_experience_path %>
