--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,8 +1,10 @@
-<h1>Experiences#show</h1>
+<h4>Your experience</h4>
+
+<br>
 
 <div>
-<h2><strong><%=@experience.title  %></strong></h2>
-<p><%= @experience.description %></p>
-<p><%= @experience.location %></p>
-<p><%= @experience.price %> EUR</p>
+  <h2><strong><%=@experience.title  %></strong></h2>
+  <p><%= @experience.description %></p>
+  <p><%= @experience.location %></p>
+  <p><%= @experience.price %> EUR</p>
 </div>
