--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Experiences#new</h1>
-<p>Find me in app/views/experiences/new.html.erb</p>
+<h1>Add NEW experience</h1>
+
+<%= render "form", experience: @experience %>
+
+<br>
+
+<div>
+  <%= link_to "Back to experiences", experiences_path %>
+</div>
