--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Bookings#index</h1>
-<p>Find me in app/views/bookings/index.html.erb</p>
+<h1>All your booked experiences</h1>
+
+<ul>
+<% @bookings.each do |booking| %>
+<li><%= booking.experience.title %></li>
+<li><%= booking.experience.location %></li>
+<li><%= booking.start_date.to_formatted_s(:short) %></li>
+<li><%= booking.end_date.to_formatted_s(:short) %></li>
+<%= link_to "Cancel your booking",
+      booking_path(booking),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+    %>
+<% end %>
+<br>
+</ul>
