--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -12,3 +12,5 @@
       data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
     %>
 </div>
+
+<%= link_to "Back to your bookings", bookings_path %>
