--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,14 +2,16 @@
 
 <ul>
 <% @bookings.each do |booking| %>
-<li><%= booking.experience.title %></li>
-<li><%= booking.experience.location %></li>
-<li><%= booking.start_date.to_formatted_s(:short) %></li>
-<li><%= booking.end_date.to_formatted_s(:short) %></li>
-<%= link_to "Cancel your booking",
-      booking_path(booking),
-      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-    %>
-<% end %>
-<br>
+  <%= link_to booking_path(booking) do %>
+    <li><%= booking.experience.title %></li>
+    <li><%= booking.experience.location %></li>
+    <li><%= booking.start_date.to_formatted_s(:short) %></li>
+    <li><%= booking.end_date.to_formatted_s(:short) %></li>
+  <% end %>
+  <%= link_to "Cancel your booking",
+        booking_path(booking),
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+      %>
+  <% end %>
+  <br>
 </ul>
