navbar with homepage, lxperiences index, sign up and longin

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,20 @@
 // Define variables for your color scheme
 
+//color pallete
+$cultured: #F2F7F6;
+$peach-crayola: #FDCC9B;
+$mykado-yellow: #FFC321;
+$orange: #FA8100;
+$cafe-noir: #47321C;
+$rich-black: #090B0B;
+
+
+
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
 $yellow: #FFC65A;
-$orange: #E67E22;
+// $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
