--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,9 @@
 // Specific CSS for your home-page
+.page-top-margin {
+  margin: 100px 100px 50px;
+}
+
+.link {
+  text-decoration: none;
+  color: $rich-black;
+}
