--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fauna+One&display=swap');
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
@@ -9,4 +11,110 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: $mykado-yellow;
+  padding: 20px;
+  height: 100px;
+  padding: 20px;
+  padding-left: 100px;
+
+  .h1 {
+    font-size: 150%;
+  }
+
+  .navbar-link {
+     color: $rich-black;
+     text-decoration: none;
+     position: relative;
+     display: block;
+     transition: .5s;
+     z-index: 1;
+     &:before {
+       content: '';
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       border-top: 2px solid $cafe-noir;
+       border-bottom: 2px solid $cafe-noir;
+       transform: scaleY(2);
+       opacity: 0;
+       transition: .3s;
+     }
+     &:after {
+       content: '';
+       position: absolute;
+       top: 2px;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       background-color: $cultured;
+       transform: scale(0);
+       opacity: 0;
+       transition: .3s;
+       z-index: -1;
+     }
+     &:hover {
+       color: $cafe-noir;
+       &:before {
+         transform: scaleY(1);
+         opacity: 1;
+       }
+       &:after {
+         transform: scaleY(1);
+         opacity: 1;
+       }
+     }
+
+
+     // &:hover {
+    //   color: $cafe-noir;
+    // }
+  }
+
+  .btn {
+    border-radius: 30px;
+    border-bottom-width: 5px;
+    border-right-width: 1px;
+    border-color: #47321C;
+    color: #47321C;
+    font-size: 15px;
+    padding: 5px 15px;
+    text-align: center;
+    align-content: center;
+
+    &:hover {
+      border-bottom-width: 1px;
+      height: fit-content;
+      transition: 0.15s;
+    }
+  }
+
+  .sign-up {
+    background-color: $peach-crayola;
+    margin-left: 10px
+  }
+
+  .login {
+    background-color: $mykado-yellow;
+    margin-right: 10px;
+  }
+
+
+  .fa-crow {
+    font-size: xx-large;
+    color: $rich-black;
+
+    &:hover {
+      color: $cafe-noir;
+      transition: 0.15s;
+    }
+  }
 }
