--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,4 +1,4 @@
-<h4>Your experience</h4>
+<h4>LXperience</h4>
 
 <br>
 
@@ -6,5 +6,13 @@
   <h2><strong><%=@experience.title  %></strong></h2>
   <p><%= @experience.description %></p>
   <p><%= @experience.location %></p>
-  <p><%= @experience.price %> EUR</p>
+  <p><%= @experience.price %> eur</p>
+</div>
+
+<div>
+  <%= link_to "New experience", new_experience_path if policy(Experience).new? %>
+</div>
+
+<div>
+  <%= button_to "Destroy this experience", @experience, method: :delete %>
 </div>
