--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,10 +7,7 @@
 <p><%= @booking.experience.price %> EUR</p>
 <p><%= @booking.start_date.to_formatted_s(:short) %></p>
 <p><%= @booking.end_date.to_formatted_s(:short) %></p>
-<%= link_to "Cancel your booking",
-      booking_path(@booking),
-      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-    %>
+<%= button_to "Cancel your booking", @booking, method: :delete if policy(@booking).destroy? %>
 </div>
 
-<%= link_to "Back to your bookings", bookings_path %>
+<%= link_to "See all your bookings", bookings_path %>
