--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%# fazer each do para nav logged e não logged %>
     <%= render "shared/navbar" %>
     <%= yield %>
 
