--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<div class='page-top-margin'>
-  <h1>LXperiences</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="container">
+    <h1>LXperiences</h1>
+    <p>The app to discover the most fun part of Lisbon</p>
+    <%# btn offers %>
+  </div>
 </div>
