--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,8 +3,34 @@
   bottom: 0;
   left: 0;
   justify-content: space-between;
-  background-color: $peach-crayola;
+  background-color: $cultured;
   width: 100%;
-  height: 30px;
-  font-size: smaller;
+  height: 60px;
+  font-size: small;
+  display: flex;
+  align-items: center;
+  padding: 0px 50px;
+  color: $rich-black;
 }
+
+
+
+
+
+// .footer-links {
+//   display: flex;
+//   align-items: center;
+// }
+// .footer-links a {
+//   color: black;
+//   opacity: 0.15;
+//   text-decoration: none;
+//   font-size: 24px;
+//   padding: 0px 10px;
+// }
+// .footer-links a:hover {
+//   opacity: 1;
+// }
+// .footer .fa-heart {
+//   color: #D23333;
+// }
