--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,14 +1,13 @@
-<h1>LXperiences</h1>
-<p>The app to discover the most fun part of Lisbon and regions</p>
+<div class='page-top-margin'>
+  <h1>Our offers</h1>
+    <% @experiences.each do |experience|%>
+      <ul>
+        <li><strong><%= experience.title %></strong></li>
+        <li><strong></strong><%= experience.location %></li>
+        <li><strong></strong><%= experience.price %></li>
+        <br>
+      </ul>
+    <% end %>
 
-
-  <% @experiences.each do |experience|%>
-    <ul>
-      <li><strong><%= experience.title %></strong></li>
-      <li><strong></strong><%= experience.location %></li>
-      <li><strong></strong><%= experience.price %></li>
-      <br>
-    </ul>
-  <% end %>
-
-<%= link_to "New experience", new_experience_path %>
+  <%= link_to "New experience", new_experience_path %>
+</div>
