--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-  <div class='navbar'>
+  <div class='navbar sticky'>
     <div class="col-2">
       <%= link_to root_path do %>
         <i class="fa-solid fa-crow"></i>
