--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -12,4 +12,9 @@
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
+
+  <%= f.input :location,
+  input_html: {data: {location_autocomplete_target: "location"}},
+  wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+  %>
 <% end %>
