homepage and navbar

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   background-position: center;
   padding: 200px 0;
+  background-color: $mykado-yellow;
 
   h1 {
     background-color: $mykado-yellow;
