--- a/app/assets/stylesheets/components/_navbar-logedin.scss
+++ b/app/assets/stylesheets/components/_navbar-logedin.scss
@@ -2,7 +2,7 @@
 
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: $mykado-yellow;
 }
 
 .navbar-lewagon .navbar-collapse {
