--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :description %>
     <%= f.input :location %>
     <%= f.input :price %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
