--- a/app/assets/stylesheets/components/_address_autocomplete.scss
+++ b/app/assets/stylesheets/components/_address_autocomplete.scss
@@ -1,7 +1,7 @@
 .mapboxgl-ctrl-geocoder {
   max-width: none;
   width: 100%;
-  border: 1px solid lightgrey;
+  border: 1px solid rgb(211, 211, 211);
   box-shadow: none;
   background-color: transparent;
 }
