--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -5,16 +5,14 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= f.input :location %>
+    <%= f.input :location,
+      input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"},
+      wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+    %>
     <%= f.input :price %>
   </div>
 
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
-
-  <%= f.input :location,
-  input_html: {data: {location_autocomplete_target: "location"}},
-  wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
-  %>
 <% end %>
