--- a/app/views/experiences/_info_window.html.erb
+++ b/app/views/experiences/_info_window.html.erb
@@ -1,4 +1,6 @@
-<h2><%= experience.title %></h2>
-<p><%= experience.location %></p>
-<p><%= experience.description %></p>
-<p><%= experience.price %></p>
+<div class="card" style="background-color: #fff185">
+  <h2><%= link_to experience.title, new_experience_booking_path(experience) %></h2>
+  <p><strong><%= experience.location %></strong></p>
+  <p><%= experience.description %></p>
+  <p><strong><%= experience.price %> eur</strong></p>
+</div>
