--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,18 +1,16 @@
 <div class='page-top-margin'>
   <h1>Our offers</h1>
 
-
-
+  <%  @experiences.each do |experience|%>
   <div class="card-product">
-    <%  @experiences.each do |experience|%>
-      <%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
+      <%= cl_image_tag experience.photo.key %>
       <div class="card-product-infos">
         <h2><strong><%= link_to experience.title, experience_path(experience) %></strong></h2>
         <p><%= experience.location %></p>
-        <p><%= experience.price %> eur</p>
+        <p><%= experience.price %> EUR</p>
       </div>
-     <% end %>
   </div>
+  <% end %>
 
 
   <div>
