--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/experiences";
 
 // Geocoding
 @import "@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder";
