--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -11,6 +11,15 @@
   align-items: center;
   padding: 0px 50px;
   color: $rich-black;
+  a {
+    text-decoration: none;
+    color: $rich-black;
+    font-size: medium;
+    &:hover {
+      color: $cafe-noir;
+      text-shadow: 0 0 25px $peach-crayola;
+    }
+  }
 }
 
 
