--- a/app/assets/stylesheets/components/_navbar-logedin.scss
+++ b/app/assets/stylesheets/components/_navbar-logedin.scss
@@ -27,59 +27,72 @@
     width: 100%;
   }
 
-  .h1 {
-    font-size: 150%;
+  .homepage {
+    color: $rich-black;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    transition: .5s;
+    z-index: 1;
+    width: fit-content;
+
+    .h1 {
+      font-size: 150%;
+    }
+
+    .fa-crow {
+      font-size: xx-large;
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-top: 2px solid $cafe-noir;
+      border-bottom: 2px solid $cafe-noir;
+      transform: scaleY(2);
+      opacity: 0;
+      transition: .3s;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      top: 2px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $cultured;
+      transform: scale(0);
+      opacity: 0;
+      transition: .3s;
+      z-index: -1;
+    }
+    &:hover {
+      color: $cafe-noir;
+      &:before {
+        transform: scaleY(1);
+        opacity: 1;
+      }
+      &:after {
+        transform: scaleY(1);
+        opacity: 1;
+      }
+    }
   }
 
-  .navbar-link {
-     color: $rich-black;
-     text-decoration: none;
-     position: relative;
-     display: block;
-     transition: .5s;
-     z-index: 1;
-     &:before {
-       content: '';
-       position: absolute;
-       top: 0;
-       left: 0;
-       width: 100%;
-       height: 100%;
-       border-top: 2px solid $cafe-noir;
-       border-bottom: 2px solid $cafe-noir;
-       transform: scaleY(2);
-       opacity: 0;
-       transition: .3s;
-     }
-     &:after {
-       content: '';
-       position: absolute;
-       top: 2px;
-       left: 0;
-       width: 100%;
-       height: 100%;
-       background-color: $cultured;
-       transform: scale(0);
-       opacity: 0;
-       transition: .3s;
-       z-index: -1;
-     }
-     &:hover {
-       color: $cafe-noir;
-       &:before {
-         transform: scaleY(1);
-         opacity: 1;
-       }
-       &:after {
-         transform: scaleY(1);
-         opacity: 1;
-       }
-     }
-
-
-     // &:hover {
-    //   color: $cafe-noir;
-    // }
+  .nav-item {
+    line-height: 40px;
+    margin-right: 10px;
+    a {
+      color: $rich-black;
+      &:hover{
+        color: $cafe-noir;
+        text-shadow: 0 0 25px $orange;
+      }
+    }
   }
 
   .btn {
@@ -96,16 +109,6 @@
     &:hover {
       border-bottom-width: 1px;
       height: fit-content;
-      transition: 0.15s;
-    }
-  }
-
-  .fa-crow {
-    font-size: xx-large;
-    color: $rich-black;
-
-    &:hover {
-      color: $cafe-noir;
       transition: 0.15s;
     }
   }
