--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -27,60 +27,62 @@
     width: 100%;
   }
 
-  .h1 {
-    font-size: 150%;
+  .homepage {
+    color: $rich-black;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    transition: .5s;
+    z-index: 1;
+    width: fit-content;
+
+    .h1 {
+      font-size: 150%;
+    }
+
+    .fa-crow {
+      font-size: xx-large;
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-top: 2px solid $cafe-noir;
+      border-bottom: 2px solid $cafe-noir;
+      transform: scaleY(2);
+      opacity: 0;
+      transition: .3s;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      top: 2px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $cultured;
+      transform: scale(0);
+      opacity: 0;
+      transition: .3s;
+      z-index: -1;
+    }
+    &:hover {
+      color: $cafe-noir;
+      &:before {
+        transform: scaleY(1);
+        opacity: 1;
+      }
+      &:after {
+        transform: scaleY(1);
+        opacity: 1;
+      }
+    }
   }
 
-  .navbar-link {
-     color: $rich-black;
-     text-decoration: none;
-     position: relative;
-     display: block;
-     transition: .5s;
-     z-index: 1;
-     &:before {
-       content: '';
-       position: absolute;
-       top: 0;
-       left: 0;
-       width: 100%;
-       height: 100%;
-       border-top: 2px solid $cafe-noir;
-       border-bottom: 2px solid $cafe-noir;
-       transform: scaleY(2);
-       opacity: 0;
-       transition: .3s;
-     }
-     &:after {
-       content: '';
-       position: absolute;
-       top: 2px;
-       left: 0;
-       width: 100%;
-       height: 100%;
-       background-color: $cultured;
-       transform: scale(0);
-       opacity: 0;
-       transition: .3s;
-       z-index: -1;
-     }
-     &:hover {
-       color: $cafe-noir;
-       &:before {
-         transform: scaleY(1);
-         opacity: 1;
-       }
-       &:after {
-         transform: scaleY(1);
-         opacity: 1;
-       }
-     }
-
-
-     // &:hover {
-    //   color: $cafe-noir;
-    // }
-  }
 
   .btn {
     border-radius: 30px;
@@ -88,10 +90,11 @@
     border-right-width: 1px;
     border-color: #47321C;
     color: #47321C;
-    font-size: 15px;
-    padding: 5px 15px;
+    font-size: 20px;
+    padding: 5px 46px;
     text-align: center;
     align-content: center;
+    width: 180px;
 
     &:hover {
       border-bottom-width: 1px;
@@ -111,13 +114,5 @@
   }
 
 
-  .fa-crow {
-    font-size: xx-large;
-    color: $rich-black;
 
-    &:hover {
-      color: $cafe-noir;
-      transition: 0.15s;
-    }
-  }
 }
