--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,24 +1,49 @@
 // Specific CSS for your home-page
 
 .banner {
-  background-image: asset_url("background.png");
+  background-image: asset_url("background.png") ;
   background-size: cover;
   background-position: center;
-  padding: 200px 0;
-  background-color: $mykado-yellow;
+  padding-bottom: 75px;
+  height: 675px;
+  display: flex;
+  align-items: flex-end;
 
-  h1 {
-    background-color: $mykado-yellow;
-    height: fit-content;
-    width: fit-content;
-    padding: 3px;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+    h1 {
+      width: fit-content;
+      font-size: 190%;
+      padding: 10px;
+      border-radius: 5px;
+      color: $cultured;
+      margin-bottom: 0px;
+      text-shadow: 1px 1px 2px $rich-black, 0 0 25px $rich-black
+    }
+
+    .btn {
+      border-radius: 30px;
+      border-bottom-width: 5px;
+      border-right-width: 1px;
+      border-color: #090B0B;
+      color: #090B0B;
+      font-size: 129%;
+      padding: 16px 35px;
+      text-align: center;
+      align-content: center;
+      background-color: rgba(242, 247, 246, 0.8);
+      box-shadow: 0px 1px 0px $cultured;
+
+      &:hover {
+        border-bottom-width: 1px;
+        height: fit-content;
+        transition: 0.15s;
+      }
+    }
   }
 
-  p {
-    background-color: $mykado-yellow;
-    height: fit-content;
-    width: fit-content;
-    font-size: 150%;
-    padding: 10px;
-  }
 }
