--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
   <div class="container">
-    <h1>LXperiences</h1>
-    <p>The app to discover the most fun part of Lisbon</p>
-    <%# btn offers %>
+      <h1>The app to discover the most fun part of Lisbon</h1>
+      <%= link_to "Explore experiences", experiences_path, class: 'btn' %>
+      <%= link_to "Create experience", new_experience_path, class: 'btn' %>
   </div>
 </div>
