--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,12 @@
   <div class='navbar sticky'>
-    <div class="col-2">
-      <%= link_to root_path do %>
+    <%= link_to root_path, class: 'text-decoration-none' do %>
+      <div class="homepage col-4 d-flex justify-content-space-between align-items-center">
         <i class="fa-solid fa-crow"></i>
-      <% end %>
-     </div>
+        <h1>LXperiences</h1>
+      </div>
+    <% end %>
 
-    <div class="col-6 d-flex justify-content-center">
-      <h1><%= link_to "LXperiences", experiences_path, class: 'navbar-link' %></h1>
+    <div class="col-4">
     </div>
 
     <div class="col-4 d-flex justify-content-around align-items-end">
