--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,29 @@
-<h1><strong>Book </strong><%= @experience.title %></h1>
-<br>
-<%= simple_form_for [@experience, @booking] do |f| %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.submit "Book experience" %>
-<% end %>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6 col-lg-6">
+
+      <h1 style="text-align: center;"><strong>Book </strong></h1>
+      <h2 style="text-align: center;"><%= @experience.title %></h2>
+      <br>
+      <%= simple_form_for [@experience, @booking] do |f| %>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-12">
+          <%= f.input :start_date %>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-12">
+          <%= f.input :end_date %>
+        </div>
+      </div>
+      <br>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-12">
+          <%= f.submit "Book experience", class:"btn-submit" %>
+        </div>
+      </div>
+      <% end %>
+
+    </div>
+  </div>
+</div>
