finished forms: new experience, new booking

--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,12 +1,12 @@
-<div class='page-top-margin'>
- 
-  <h1>Add new experience </h1>
-  <br>
-  <%= render "form", experience: @experience %>
-  <br>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6">
 
-  <div>
-    <%= link_to "Back to experiences", experiences_path %>
+      <h1 style="text-align: center;">Create a new experience</h1>
+      <br>
+      <%= render "form", experience: @experience %>
+      <br>
+
+    </div>
   </div>
-
 </div>
