--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,29 +1,30 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="col-12 col-md-6 col-lg-6">
-
+    <div class="col-12 col-md-6">
       <h1 style="text-align: center;"><strong>Book </strong></h1>
       <h2 style="text-align: center;"><%= @experience.title %></h2>
       <br>
       <%= simple_form_for [@experience, @booking] do |f| %>
       <div class="row justify-content-center">
-        <div class="col-12 col-md-12 col-lg-12">
+        <div class="col-12">
           <%= f.input :start_date %>
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-12 col-md-12 col-lg-12">
+        <div class="col-12">
           <%= f.input :end_date %>
         </div>
       </div>
       <br>
-      <div class="row justify-content-center">
-        <div class="col-12 col-md-12 col-lg-12">
+      <div class="row">
+        <div class="col-6">
+          <%= link_to "Back to experiences", experiences_path, class:"btn btn-back" %>
+        </div>
+        <div class="col-6 text-end">
           <%= f.submit "Book experience", class:"btn-submit" %>
         </div>
       </div>
       <% end %>
-
     </div>
   </div>
 </div>
