--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -5,15 +5,29 @@
   <div class="form-inputs">
     <%= f.input :title %>
     <%= f.input :description %>
-    <%= f.input :location,
-      input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"},
-      wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
-    %>
-    <%= f.input :price %>
+    <div class="row">
+      <div class="col-md-6">
+
+          <%= f.input :location, class: "mapboxgl-ctrl-geocoder--input",
+            input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"},
+            wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+          %>
+
+      </div>
+
+      <div class="col-md-6">
+        <%= f.input :price %>
+      </div>
+    </div>
     <%= f.input :photo, as: :file %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <br>
+  <div class="row">
+    <div class="col-6">
+      <%= link_to "Back to experiences", experiences_path, class:"btn btn-back" %>
+    </div>
+    <div class="col-6 text-end">
+      <%= f.button :submit, class:"btn-submit" %>
+    </div>
   </div>
 <% end %>
