--- a/app/views/experiences/_info_window.html.erb
+++ b/app/views/experiences/_info_window.html.erb
@@ -1,6 +1,6 @@
-<div class="card" style="background-color: #fff185">
+
   <h2><%= link_to experience.title, new_experience_booking_path(experience) %></h2>
   <p><strong><%= experience.location %></strong></p>
   <p><%= experience.description %></p>
-  <p><strong><%= experience.price %> eur</strong></p>
-</div>
+  <p><strong><%= experience.price %> EUR</strong></p>
+
