--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,22 +1,34 @@
 <div class='page-top-margin'>
-  <h3>Experience the best of Lisbon and region</h3>
+  <div class="container-fluid">
+    <div class="index-heading">
+      <h3>Experience the best of Lisbon and region</h3>
+    </div>
 
-  <div class="cards">
-    <%  @experiences.each do |experience|%>
-      <div class="card-product">
-          <%= cl_image_tag experience.photo.key %>
-          <div class="card-product-infos">
-            <h2><strong><%= link_to experience.title, experience_path(experience) %></strong></h2>
-            <p><%= experience.location %></p>
-            <p><%= experience.price %> EUR</p>
-          </div>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="row">
+          <% @experiences.each do |experience| %>
+            <div class="col-6">
+              <%= link_to experience_path(experience) do %>
+                <div class="card-index justify-content" style='background-image: url(<%= cl_image_path experience.photo.key, crop: :fill %>)'>
+                  <h2 class><strong><%= experience.title %></strong></h2>
+                  <p><%= experience.location %></p>
+                  <p><%= experience.price %> EUR</p>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
       </div>
-    <% end %>
-  </div>
 
-  <div style="width: 100%; height: 600px;"
-    data-controller="map"
-    data-map-markers-value="<%= @markers.to_json %>"
-    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+
+      <div class="col-sm-4">
+        <div id="map" style="height: 600px;"
+          data-controller="map"
+          data-map-markers-value="<%= @markers.to_json %>"
+          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
+      </div>
+    </div>
   </div>
 </div>
