--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,8 +1,3 @@
 // Import page-specific CSS files here.
 @import "home";
-
-// .page-top-margin {
-//   margin: 100px 100px 50px;
-// }
-
-
+@import "booked";
