--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,24 +1,27 @@
 <div class="container text-center mb-5">
   <h1>All your booked experiences</h1>
-  <% @bookings.each do |booking| %>
-    <div class="card-booked">
-      <%= link_to booking_path(booking) do %>
-        <div>
-          <%= cl_image_tag booking.experience.photo.key %>
-          <ul>
-            <li><%= booking.experience.title %></li>
-            <li><%= booking.experience.location %></li>
-            <li><%= booking.start_date.to_formatted_s(:short) %></li>
-            <li><%= booking.end_date.to_formatted_s(:short) %></li>
-          </ul>
-        </div>
-      <% end %>
-      <%= link_to "Cancel your booking",
-            booking_path(booking),
-            class:"btn-cancel",
-            data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-          %>
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="row">
+        <% @bookings.each do |booking| %>
+          <div class="col-6">
+              <div class="card-index justify-content" style='background-image: url(<%= cl_image_path booking.experience.photo.key, crop: :fill %>)'>
+              <%= link_to booking_path(booking) do %>
+                <div>
+                  <h2 class><strong><%= booking.experience.title %></strong></h2>
+                  <p><%= booking.experience.location %></p>
+                  <p><%= booking.start_date.to_formatted_s(:short) %></p>
+                  <p><%= booking.end_date.to_formatted_s(:short) %></p>
+                </div>
+              <% end %>
+              <%= link_to "Cancel your booking",
+                  booking_path(booking),
+                  class:"btn-cancel",
+                  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+              </div>
+          </div>
+        <% end %>
+      </div>
     </div>
-    <% end %>
-  <br>
+  </div>
 </div>
