finished forgot password form

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -20,7 +20,18 @@
         <% end %>
         <br>
 
-        <%= render "devise/shared/links" %>
+        <div class="row">
+          <div class="col-md-6">
+            <%- if controller_name != 'sessions' %>
+              <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-submit" %><br />
+            <% end %>
+          </div>
+          <div class="col-md-6 text-end">
+            <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+              <%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-submit" %><br />
+            <% end %>
+          </div>
+        </div>
 
     </div>
   </div>
