delete button working and appearing just for the user that created experience

--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -14,7 +14,7 @@
 </div>
 <br>
 <div>
-  <%= button_to "Delete this experience", @experience, method: :delete %>
+  <%= button_to "Delete this experience", @experience, method: :delete if policy(@experience).destroy? %>
 </div>
 
 <div>
