--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,4 +16,11 @@
   border-radius: 4px;
   opacity:80%;
   margin-bottom: 20px;
+  position: relative;
+}
+
+.card-content {
+  position:absolute;
+  bottom: 10px;
+  right: 20px;
 }
