--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,6 +14,21 @@
   padding: 10px;
   border-color: #f1e3d5;
   border-radius: 4px;
-  opacity:80%;
+  opacity:70%;
   margin-bottom: 20px;
+  text-align: end;
+}
+
+.center {
+  margin: 20px auto ;
+  border-radius: 10px;
+  border-width: 2px;
+}
+
+.card-img-top {
+  border-radius: 10px;
+}
+
+.card-body {
+  margin-top: 25px;
 }
