--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,5 +3,8 @@
 .mapboxgl-popup-content {
   text-align: center;
   font-family: "Open Sans", sans-serif;
-  background-color: green !important;
+  background-color: #f8e8ba !important;
+  border: white 20px !important;
+  color: black !important;
+  border-radius: 50px;
 }
