--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,12 +23,12 @@
 .center {
   margin: 20px auto;
   border-radius: 10px;
-  border-width: 2px;
+  // border-width: 2px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
 }
 
 .card-img-top {
-  border-radius: 10px;
+  border-radius: 10px 10px 0px 0px;
   height: 350px;
   width: 100%;
   object-fit: cover;
