--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   justify-content: space-between;
-  background-color: $cultured;
+  background-color: #edeeee;
   width: 100%;
   height: 60px;
   font-size: small;
