--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
   </head>
 
-  <body>
+  <body class="pb-5">
     <% if user_signed_in? %>
       <%= render "shared/navbar_logedin" %>
     <% else %>
