--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,14 +10,14 @@
         <div class="row">
           <div class="col-md-6">
             <%= f.input :first_name,
-                        error: 'First name is mandatory, please specify one',
+                        # error: 'First name is mandatory, please specify one',
                         required: true,
                         autofocus: true,
                         input_html: { autocomplete: "first-name" }%>
           </div>
           <div class="col-md-6">
           <%= f.input :last_name,
-                      error: 'Last name is mandatory, please specify one',
+                      # error: 'Last name is mandatory, please specify one',
                       required: true,
                       autofocus: true,
                       input_html: { autocomplete: "last-name" }%>
